--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,10 @@
   body {
     @apply font-sans antialiased text-black;
   }
+
+  h1, h2, h3 {
+    @apply font-heading;
+  }
 }
 
 @layer utilities {
